--- a/custom-tier-progress-bar-item.liquid
+++ b/custom-tier-progress-bar-item.liquid
@@ -140,7 +140,7 @@
   .tier-progress-free-items .free-item-price-label {
     display: flex;
     gap: 1rem;
-    aligh-items: center;
+    align-items: center;
   }
   .tier-progress-free-items .free-item-price-label s {
     color: rgb(210, 213, 217);
