--- a/custom-tier-progress-bar-item.liquid
+++ b/custom-tier-progress-bar-item.liquid
@@ -46,14 +46,14 @@
   assign remaining_amount = next_threshold | minus: total_price | money_without_trailing_zeros
 -%}
 
-<!-- Container for tier progress free items -->
+{% # Container for tier progress free items %}
 <div class="tier-progress-free-items">
   {%- for tier in tiers -%}
     {%- assign free_product = all_products[tier.product_handle] -%}
     {%- assign is_unlocked = false -%}
     {%- assign is_current_tier = false -%}
 
-    <!-- Check if the current tier is unlocked -->
+    {% # Check if the current tier is unlocked %}
     {%- if forloop.index <= unlocked_index -%}
       {%- assign is_unlocked = true -%}
       {%- if progress_type == 'replace' and forloop.index == unlocked_index -%}
@@ -63,7 +63,7 @@
 
     {%- capture tier_progress_item -%}
       <div class="tier-progress-box">
-        <!-- Display product image -->
+        {% # Display product image %}
         <div class="tier-product-image{% if is_unlocked %} unlocked{% endif %}">
           {%- if free_product.featured_image != blank -%}
             {{
@@ -80,21 +80,21 @@
 
         <div class="tier-product-info">
           {% if free_product.title != blank %}
-            <!-- Display product title -->
+            {% # Display product title %}
             <span class="link product-title">{{ free_product.title }}</span>
           {% endif %}
 
           {%- if is_unlocked -%}
-            <!-- Display the price label if the product is unlocked -->
+            {% # Display the price label if the product is unlocked %}
             <div class="free-item-price-label">
-              <div class="compare-price">
-                <s>{{ free_product.compare_at_price | money }}</s>
-              </div>
               <div class="tier-label">
                 <span>Free</span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14" fill="none">
                   <path d="M7.58268 1.75008L8.59429 4.38025C8.75879 4.80797 8.84105 5.02183 8.96896 5.20171C9.08232 5.36115 9.22162 5.50044 9.38105 5.61381C9.56094 5.74172 9.77479 5.82397 10.2025 5.98848L12.8327 7.00008L10.2025 8.01168C9.7748 8.17619 9.56094 8.25844 9.38105 8.38635C9.22162 8.49972 9.08232 8.63902 8.96896 8.79845C8.84105 8.97834 8.75879 9.19219 8.59429 9.61991L7.58268 12.2501L6.57108 9.61991C6.40657 9.19219 6.32432 8.97834 6.19641 8.79845C6.08304 8.63902 5.94375 8.49972 5.78432 8.38635C5.60443 8.25844 5.39057 8.17619 4.96285 8.01169L2.33268 7.00008L4.96285 5.98848C5.39057 5.82397 5.60443 5.74172 5.78432 5.61381C5.94375 5.50044 6.08304 5.36115 6.19641 5.20171C6.32432 5.02183 6.40657 4.80797 6.57108 4.38025L7.58268 1.75008Z" fill="#FFB503"></path>
                 </svg>
+              </div>
+              <div class="compare-price">
+                <s>{{ free_product.compare_at_price | money }}</s>
               </div>
             </div>
           {% endif %}
@@ -102,20 +102,24 @@
       </div>
     {%- endcapture -%}  
 
-    <!-- Display the free product if unlocked, based on progress type -->
+    {% # Display the free product if unlocked, based on progress type %}
     {%- if progress_type == 'add' or is_current_tier -%}
       {% if is_unlocked %}
         {{ tier_progress_item }}
       {% endif %}
 
     {%- elsif progress_type == 'replace' and is_current_tier -%}
-      <!-- Show only the most recent eligible product for 'replace' progress type -->
+      {% # Show only the most recent eligible product for 'replace' progress type %}
       {{ tier_progress_item }}
     {%- endif -%}
   {%- endfor -%}
 </div>
 
 <style>
+  .tier-progress-free-items {
+    display: flex;
+    flex-direction: column-reverse;
+  }
   .tier-progress-free-items .tier-product-image {
     height: 70px;
     width: 70px;
@@ -139,16 +143,17 @@
   }
   .tier-progress-free-items .free-item-price-label {
     display: flex;
-    gap: 1rem;
-    align-items: center;
+    gap: 0.5rem;
+    align-items: baseline;
   }
   .tier-progress-free-items .free-item-price-label s {
-    color: rgb(210, 213, 217);
-    font-size: 14px;
-    font-weight: 300;
+    color: rgb(33, 35, 38, 0.7);
+    font-size: 12px;
+    font-weight: 400;
   }
   .tier-progress-free-items .free-item-price-label .tier-label {
     font-weight: 600;
+    font-size: 14px;
     color: #278816;
     text-transform: uppercase;
     display: flex;
