--- a/custom-tier-progress-bar-item.liquid
+++ b/custom-tier-progress-bar-item.liquid
@@ -11,7 +11,7 @@
   assign total_tiers = tiers.size
   assign total_price = cart.total_price
   assign highest_tier = tiers.last.threshold | times: 100
-  assign progress_type = settings.tier_progress_type
+  assign progress_type = tier_data.tier_progress_type | default: 'add'
 
   assign previous_threshold = 0
   assign next_threshold = highest_tier
